udapte some thing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Store Online</title>
+    <!-- =================== Favicon ================== -->
+    <link rel="icon" href="img/favicon.ico">
     <!-- =================== CSS file ================== -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,13 +29,15 @@
       </nav>
       <!-- =================== HOME ================== -->
       <div class="Home">
-        <div class="home__text">
-          <h1>IPHONE 15 PRO MAX</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem distinctio exercitationem ducimus quisquam ratione esse itaque ullam ea dolores quibusdam.</p>
-          <a href="#">All Product</a>
-        </div>
-        <div class="home__img">
-          <img src="img/0.png" id="home__img" alt="Image">
+        <div class="home_container">
+          <div class="home__text">
+            <h1>IPHONE 15 PRO MAX</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem distinctio exercitationem ducimus quisquam ratione esse itaque ullam ea dolores quibusdam.</p>
+            <a href="#">All Product</a>
+          </div>
+          <div class="home__img">
+            <img src="img/0.png" id="home__img" alt="Image">
+          </div>
         </div>
         <div class="iphones">
           <img src="img/0.png" onclick="change(this.src,'#000')" alt="Image">
